--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,17 +10,18 @@ dependencies:
   bloc: ^8.0.3
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.0.1
+  flutter_bloc: any
   flutter_localizations:
     sdk: flutter
-  intl: ^0.17.0
+  flutter_map: ^0.14.0
+  intl: any
 
 dev_dependencies:
-  bloc_test: ^9.0.3
+  bloc_test: any
   flutter_test:
     sdk: flutter
-  mocktail: ^0.3.0
-  very_good_analysis: ^2.4.0
+  mocktail: any
+  very_good_analysis: any
 
 flutter:
   uses-material-design: true
