--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   bloc: ^8.0.3
+  dio: ^4.0.4
   flutter:
     sdk: flutter
   flutter_bloc: any
@@ -17,6 +18,7 @@ dependencies:
   http: ^0.13.4
   intl: any
   latlong2: ^0.8.1
+  provider: ^6.0.2
 
 dev_dependencies:
   bloc_test: any
