--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: any
+  flutter_dotenv: ^5.0.2
   flutter_localizations:
     sdk: flutter
   flutter_map: ^0.14.0
@@ -30,3 +31,6 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   generate: true
+
+  assets:
+    - .env
